# azeroth-core-admin-panel

./: .env.example  .gitignore  project_tree.txt  pyproject.toml
configs/: enchantments_sets.yml
src/app/: main.py
src/app/common/bootstrap/: commons.py  di.py  register_use_cases.py  use_cases.py
src/app/common/bootstrap/use_cases/: auth.py  characters.py  world.py
src/app/common/cli/: cli.py
src/app/common/cli/commands/characters/: annotations.py  async_funcs.py  characters_cli.py  enchantment_input.py
src/app/common/cli/commands/remote/: remote_cli.py
src/app/common/cli/commands/world/: characters_cli.py  items_cli.py  remote_cli.py
src/app/common/errors/: base_exceptions.py
src/app/common/infrastructure/db/: base.py  engines.py  providers.py  session.py  uow.py
src/app/common/protocols/: uows.py
src/app/config/: settings.py
src/app/modules/acore_adapter/application/characters/: dto.py
src/app/modules/acore_adapter/application/remote/: commands.py
src/app/modules/acore_adapter/common/: protocols.py  repositories.py
src/app/modules/acore_adapter/common/constants/: classes.py  gender.py  races.py
src/app/modules/acore_adapter/common/interface/: gateways.py  protocols.py  repositories.py
src/app/modules/acore_adapter/common/utils/: format.py
src/app/modules/acore_adapter/infrastructure/auth/: auth_uow.py
src/app/modules/acore_adapter/infrastructure/characters/: uow.py
src/app/scripts/: dbc_enchantments_to_json.py  spell_item_enchantments.json
tests/: test_apply_item_enchantments.py  test_auto_enchanter.py  test_enchantment_input.py
(+79 files in other folders)
